--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ footer {
 /* конец блока прижимает футер к низу страници на случай если у нас будет мало контента, и мы не хотим видеть ниже футера пустоту */
 h1 {
   font-size: 140px;
-  line-height: 1.22;
+  line-height: 0.82;
   text-transform: capitalize;
   color: #2b7fff;
   font-family: "Play", sans-serif;
@@ -83,7 +83,7 @@ a {
 a:hover {
   color: #2b7fff;
 }
-a.primary {
+a.site-nav__link--current {
   color: #2b7fff;
   font-weight: 700;
 }
@@ -116,6 +116,7 @@ address {
 .container {
   padding-left: 100px;
   padding-right: 100px;
+  outline: 1px solid tomato;
   margin: 0 auto;
 }
 @media screen and (min-width: 480px) {
@@ -128,9 +129,9 @@ address {
     width: 768px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1440px) {
   .container {
-    width: 1200px;
+    width: 1440px;
   }
 }
 
@@ -154,35 +155,212 @@ address {
   color: #ffffff;
 }
 
+header {
+  padding: 32px 0;
+}
+header .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+header .container .logo-container {
+  margin-right: 240px;
+}
+header .container .menu-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+header .container .menu-container .nav-container {
+  margin-right: 240px;
+}
+header .container .menu-container .nav-container .site-nav .site-nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+header .container .menu-container .nav-container .site-nav .site-nav__list .site-nav__item:not(:last-child) {
+  margin-right: 56px;
+}
+header .container .menu-container .socials .socials__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+header .container .menu-container .socials .socials__list .socials__item:not(:last-child) {
+  margin-right: 32px;
+}
+
 main .hero {
   background: url(./../images/hero_image.png);
   background-repeat: no-repeat;
   background-position: right;
+  margin-top: 16px;
+}
+main .hero .hero__sub-title {
+  margin-bottom: 16px;
+}
+main .hero .hero__title {
+  margin-bottom: 40px;
+}
+main .hero .hero__button {
+  width: 281px;
+  height: 53px;
+  border-radius: 32px;
+  margin-bottom: 14px;
+  border: 1px solid #2b7fff;
+  background-color: #2b7fff;
+  color: #ffffff;
+}
+main .hero .hero__button:hover {
+  background-color: #ffffff;
+  color: #2b7fff;
 }
 main .hero .hero__text {
   font-size: 12px;
   line-height: 1.5;
   color: #4a4a4a;
+  width: 280px;
+  text-align: center;
 }
-main .features .features-text {
+main .features {
+  margin-top: 16px;
+}
+main .features .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+main .features .container .features-info {
+  margin-right: 32px;
+  width: 48%;
+}
+main .features .container .features-info h2 {
+  text-align: left;
+}
+main .features .container .features-info .features-text {
   font-size: 22px;
   line-height: 1.7;
   padding-bottom: 40px;
 }
-main .features .features-text span {
+main .features .container .features-info .features-text span {
   text-transform: capitalize;
   font-weight: 600;
 }
+main .features .container .features_image {
+  width: 48%;
+  max-width: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: url(./../images/Star_1.png) no-repeat 40% 55%, url(./../images/Star_2.png) no-repeat 98% 8%, url(./../images/Star_3.png) no-repeat 97% 44%;
+}
+main .features .container .features_image .features_image__item img {
+  border-radius: 50%;
+}
+main .features .container .features_image .features_image__item:last-child {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
 main .our-jobs {
   background: url(./../images/wave_bg.png);
+  background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
   padding-top: 350px;
   padding-bottom: 100px;
 }
+main .our-jobs .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+main .our-jobs .container .our-jobs__item {
+  background-color: #ffffff;
+  border-radius: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 24px 32px;
+}
+main .our-jobs .container .our-jobs__item:not(:last-child) {
+  margin-right: 56px;
+}
+main .our-jobs .container .our-jobs__item .our-jobs__text {
+  text-align: center;
+}
+main .our-procedures .slider-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 32px;
+}
+main .our-procedures .content-wraper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 32px;
+}
+main .our-procedures .content-wraper .slider-content:not(:last-child) {
+  margin-right: 16px;
+}
 main .our-procedures .slider-content-text {
   font-size: 22px;
   line-height: 1.18;
+}
+main .our-procedures .slider-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+main .find-us {
+  margin-bottom: 94px;
 }
 main .find-us .container {
   display: -webkit-box;
@@ -190,67 +368,140 @@ main .find-us .container {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 main .find-us .container .map-container {
   margin-right: 30px;
-  width: 50%;
+  margin-left: 32px;
+}
+main .find-us .container .map-container .map_frame {
+  border-radius: 32px;
 }
 main .find-us .container .form-container {
-  width: 50%;
-}
-main .find-us .form-container {
+  border-radius: 32px;
   background: url(./../images/form_bg.png);
   background-repeat: no-repeat;
   background-color: #011c44;
   padding: 48px 56px;
 }
-main .find-us .form-container h3 {
+main .find-us .container .form-container .form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+main .find-us .container .form-container .find-us__form-wraper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+main .find-us .container .form-container h3 {
   font-size: 22px;
   font-weight: 600;
   color: #ffffff;
+  margin-bottom: 32px;
+  max-width: 274px;
+  text-align: center;
 }
-main .find-us .form-container h3 span {
+main .find-us .container .form-container h3 span {
   color: #2b7fff;
 }
-main .find-us .form-container input {
+main .find-us .container .form-container input {
   width: 310px;
   height: 52px;
+  border-radius: 32px;
+  border: 2px solid #747272;
+  background: transparent;
+  padding: 18px 32px;
+  margin-bottom: 16px;
 }
-main .find-us .form-container label {
+main .find-us .container .form-container label {
   display: none;
 }
-main .find-us .copyrights {
+main .find-us .container .form-container .form__btn-submit {
+  width: 281px;
+  height: 53px;
+  border-radius: 32px;
+  margin-bottom: 8px;
+  border: 1px solid #2b7fff;
+  background-color: #2b7fff;
+  color: #ffffff;
+}
+main .find-us .container .form-container .form__btn-submit:hover {
+  background-color: #ffffff;
+  color: #2b7fff;
+}
+main .find-us .container .form-container .copyrights {
   color: #747272;
   font-size: 12px;
   line-height: 1.5;
+  max-width: 213px;
+  text-align: center;
+}
+main .find-us .container .form-container .copyrights a {
+  color: #747272;
+  text-decoration: underline;
 }
 
-footer {
+.footer {
   background: url(./../images/pexels-photo-8101532-PhotoRoom1.png) no-repeat bottom right, url(./../images/footer.png);
   background-color: #011c44;
+  padding: 56px 0;
 }
-footer a {
+.footer .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.footer .container .footer-nav .footer-nav__list .footer-nav__item:not(:last-child) {
+  margin-bottom: 16px;
+}
+.footer .container .footer-address .footer-address__list .footer-address__item {
+  margin-bottom: 16px;
+}
+.footer .container .socials__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.footer .container .socials .socials__list .socials__item {
+  background: #fff;
+}
+.footer .container .socials .socials__list .socials__item:not(:last-child) {
+  margin-right: 24px;
+}
+.footer a {
   color: #ffffff;
 }
-footer a:hover {
+.footer a:hover {
   color: #2b7fff;
 }
-footer a.primary {
+.footer a.primary {
   color: #2b7fff;
   font-weight: 700;
 }
-footer .contacts .socials {
-  background: #fff;
-}
-footer .copy :first-child {
+.footer .copy :first-child {
   color: #ffffff;
   font-size: 16px;
   line-height: 1;
+  margin-bottom: 16px;
 }
-footer .copy :last-child {
+.footer .copy :last-child {
   font-size: 13px;
   line-height: 1;
   color: #747272;
