--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,2 +1,43 @@
 header {
+  padding: 32px 0;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .logo-container {
+      margin-right: 240px;
+    }
+    .menu-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .nav-container {
+        margin-right: 240px;
+        .site-nav {
+          .site-nav__list {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            .site-nav__item {
+              &:not(:last-child) {
+                margin-right: 56px;
+              }
+            }
+          }
+        }
+      }
+      .socials {
+        .socials__list {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          .socials__item {
+            &:not(:last-child) {
+              margin-right: 32px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
