--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,10 @@
 header {
   padding: 32px 0;
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(10px);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   .container {
     display: flex;
     justify-content: space-between;
