--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,9 @@
-@import "./units/variables";
-@import "./components/global";
-@import "./components/header";
-@import "./components/mainSection";
-@import "./components/footer";
+@import './units/variables';
+@import './components/global';
+@import './components/header';
+@import './components/hero';
+@import './components/features';
+@import './components/ourJobs';
+@import './components/procedures';
+@import './components/findUs';
+@import './components/footer';
