--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,18 +1,12 @@
 .hero {
-  // background: url(./../images/hero_image.png);
-  // background-repeat: no-repeat;
-  // background-position: right;
-  background: linear-gradient(
-      89.38deg,
-      #ffffff 30.62%,
-      rgba(255, 255, 255, 0.850898) 41.31%,
-      rgba(255, 255, 255, 0.193204) 58.65%,
-      rgba(255, 255, 255, 0) 72.78%
-    ),
-    url(./../images/hero_image.png) no-repeat right;
+  background: url(./../images/hero_bg@3x.png) no-repeat right;
+  background-size: contain;
+  min-height: 686px;
+  margin-bottom: 50px;
 
   .container {
     padding-top: 122px;
+    padding-left: 180px;
   }
   .hero__sub-title {
     margin-bottom: 16px;
