--- a/css/main.css
+++ b/css/main.css
@@ -359,12 +359,20 @@ header .container .menu-container .socials .socials__list .socials__item:not(:la
   display: flex;
   margin: 0 32px;
 }
+.our-procedures .content-wraper .slider-content {
+  position: relative;
+}
 .our-procedures .content-wraper .slider-content:not(:last-child) {
   margin-right: 16px;
 }
-.our-procedures .slider-content-text {
+.our-procedures .content-wraper .slider-content-text {
+  position: absolute;
+  bottom: 1%;
+  width: 100%;
+  text-align: center;
   font-size: 22px;
   line-height: 1.18;
+  color: #ffffff;
 }
 .our-procedures .slider-dots {
   display: -webkit-box;
