--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -32,7 +32,7 @@
           }
           .socials__link {
             .icon {
-              filter: brightness(0) invert(1);
+              fill: $white-color;
             }
           }
         }
